--- a/scenarios/travel_service/README
+++ b/scenarios/travel_service/README
@@ -1,15 +1,23 @@
-Flight_service and client
+Travel_service and client
+
+Description: 
+1. The client sends the active bundle to the main_service. 
+2. The main service will send the active bundle to the desinated services(flight_service). 
+3. The services reads and writes to the database of the active bundle (flight_service adds the flight and ticket information to the active bundle database) and send the active bundle back to the main_service. 
+4. Finally the main_service sends the active bundle back to the client.
 
 Steps to run the scenario:
 
-1.) To build the service run the following from the "service" directory:
+1.) To build the service run the following from the "service" and "flight_service" directory:
 mvn clean install
 
+In service/ and flightService/:
 2.) Setup an axis2 instance by running "scripts/setup" of the "service" directory.
 
 3.) Build ab_axis2_module project and copy "ab_axis2_module-1.0-SNAPSHOT.mar" from "target" directory into "service/scripts/axis2_server/axis2-1.6.2/repository/modules/"
 
-4.) Run "./start"  in "flightService/scripts".
+4.) Run "./start"  in "flightService/scripts" or in "service/scripts".
 
+In client/:
 5.) Run edu.purdue.cs.absoa.samples.simple.App in "client" project.
 We will see the ActiveBundle "ABReturn.jar" returned by the Service with the additional flight information in it.
