Updated Readme with info on java

--- a/active_bundle/README
+++ b/active_bundle/README
@@ -1,3 +1,5 @@
+# Requires Java 7
+
 # Install maven on your machine
 # Maven Tutorial
     http://www.mkyong.com/maven/how-to-create-a-java-project-with-maven/
